# longplexpy

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: add_tag.yml  build_and_deploy.yml  create_release.yml  python_package.yml  tag_and_release.yml  trigger_version_bump.yml
ci/: docker-build-image  update-version
docker/: Dockerfile
longplexpy/: main.py
longplexpy/barcodes/: __init__.py
longplexpy/lima/: __init__.py
longplexpy/multiqc_plugin/: __init__.py
longplexpy/multiqc_plugin/modules/lima_longplex/: __init__.py
longplexpy/tools/: hello.py  list_undesired_hybrids.py
tests/: test_main.py
tests/barcodes/: test_barcodes.py
tests/data/demux_either_i7_i5/: bc1003.lima.summary  i7_5_bc1003.lima.counts  i7_5_bc1015.lima.counts  i7_5_bc1015.lima.summary  seq102_bc1002.lima.counts  seq102_bc1002.lima.summary
tests/data/demux_i5/: bc1003.lima.summary  bc1011.lima.summary
tests/data/demux_i7/: bc1003.lima.summary  bc1011.lima.summary
tests/data/demux_i7_i5/: bc1003.lima.summary  bc1011.lima.summary  i7_i5_bc1003.lima.counts  i7_i5_bc1015.lima.counts  i7_i5_bc1015.lima.summary  seq102_bc1002.lima.counts  seq102_bc1002.lima.summary
tests/lima/: test_lima.py
tests/tools/: test_list_undesired_hybrids.py
