[tool.poetry]
name         = "longplexpy"
version      = "0.1.0"
description  = "Python tools for the LongPlex assay"
readme       = "README.md"
authors      = [
    "Zach Norgaard <zach@fulcrumgenomics.com>",
    "Clint Valentine <clint@fulcrumgenomics.com>",
]
homepage      = "https://github.com/seqwell/longplexpy"
repository    = "https://github.com/seqwell/longplexpy"
documentation = "https://github.com/seqwell/longplexpy"
classifiers   = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
multiqc = "^1"
python  = "^3.11"
defopt  = "^6.4.0"
kaleido = "0.2.1"
fgpyo = "^0.4.0"

[tool.poetry.group.dev.dependencies]
poetry      = "^1.8.2"
mypy        = "^1.5.1"
pytest      = "^7.4.4"
pytest-cov  = "^4.1.0"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.3.1"
ruff        = "0.3.3"

[tool.poetry.group.ipython]
optional = true

[tool.poetry.group.ipython.dependencies]
ipython = "^8.24.0"
ipdb    = "^0.13.13"

[tool.poetry.scripts]
longplexpy = "longplexpy.main:run"

[tool.poetry.plugins."multiqc.modules.v1"]
"longplexpy" = "longplexpy.multiqc_plugin.modules.lima_longplex:LimaLongPlexModule"

[tool.poetry.plugins."multiqc.hooks.v1"]
"execution_start" = "longplexpy.multiqc_plugin:longplexpy_multiqc_plugin_start"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seqwell/longplexpy/issues"

[build-system]
requires      = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version              = "3.11"
strict_optional             = false
check_untyped_defs          = true
disallow_incomplete_defs    = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_untyped_defs       = true
no_implicit_optional        = true
warn_no_return              = true
warn_redundant_casts        = true
warn_return_any             = true
warn_unreachable            = true
warn_unused_configs         = true
warn_unused_ignores         = true

[[tool.mypy.overrides]]
module = "defopt"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts    = [
    "--color=yes",
    "--import-mode=importlib",
    "--cov",
    "--mypy",
    "--ruff"
]

[tool.ruff]
line-length    = 100
target-version = "py311"
output-format  = "full"

[tool.ruff.lint]
select    = ["C901", "B", "E", "F", "I", "N", "W", "Q"]
ignore    = ["E203", "E701"]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = true
